// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test SelectMachineButton mobile 1`] = `
<div>
  <div
    class="button"
  >
    <svgr-url />
  </div>
</div>
`;

exports[`test SelectMachineButton should render correctly 1`] = `
<div>
  <div
    class="button"
  >
    <svgr-url />
    <span
      class="text"
      data-testid="select-machine"
    >
      Select a machine
    </span>
  </div>
</div>
`;

exports[`test SelectMachineButton when is preview mode 1`] = `
<div>
  <div
    class="button"
  >
    <svgr-url />
    <span
      class="text"
      data-testid="select-machine"
    >
      Select a machine
    </span>
  </div>
</div>
`;

exports[`test SelectMachineButton with device 1`] = `
<div>
  <div
    class="button"
  >
    <svgr-url />
    <span
      class="text"
      data-testid="select-machine"
    >
      device name
    </span>
  </div>
</div>
`;
